--- a/TestDrivenDevelopment_Demo/TestDrivenDevelopment_Demo.csproj
+++ b/TestDrivenDevelopment_Demo/TestDrivenDevelopment_Demo.csproj
@@ -22,4 +22,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CodeToPassTest\CodeToPassTest.csproj" />
+    </ItemGroup>
+
 </Project>
